# Zion-TestNet2.8.5

./: .gitignore  .gitignore.public  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE_DRAFT.md  RELEASE_NOTES_v2.8.5.md  SECURITY.md  WEBSITE_V2_ROADMAP.md  WEBSITE_V2_STATUS.md  WEBSITE_V3_IMPLEMENTATION_REPORT_2025-11-06.md
.deploy-tmp-ghpages/: 404 2.html  CNAME  README 3.md  README.md  dashboard.html  index 2.html  index 3.html  index.html  oasis.html  robots 3.txt  sitemap 3.xml  sitemap.xml  whitepaper.html
.deploy-tmp-ghpages/css/: main.css
.deploy-tmp-ghpages/docs/: api-reference.html  consciousness-levels.html  cosmic-map.html  mining-guide.html  pool-setup.html  roadmap.html  testnet-info.html  version-history.html  whitepaper-lite-cz.html  whitepaper-lite.html  whitepaper-lite.html.bak
.deploy-tmp-ghpages/js/: main.js
.deploy-tmp-ghpages/wiki.bak/: consciousness-levels.html  faq.html  index.html  (+2 more)
.github/: PULL_REQUEST_TEMPLATE.md
config/: README.md  miner.conf.example  node.conf.example  pool.conf.example
docker/: README.md  docker-compose.yml
docs/: ARCHITECTURE.md  CHANGELOG.md  DOCKER_GUIDE.md  FAQ.md  MINING_GUIDE.md  QUICK_START.md  RPC_API.md  SDK_JAVASCRIPT.md  SDK_PYTHON.md  SECURITY.md  TROUBLESHOOTING.md
scripts/: README.md  check_status.sh  create_wallet.sh  deploy_pages.sh  install.sh  start_mining.sh  start_node.sh
sdk/python/: README.md  pyproject.toml
sdk/python/zion_sdk/: __init__.py  client.py  exceptions.py  sacred_library.py  wallet.py
websiteV2/: index.html
websitev3-next/: eslint.config.mjs  mdx-components.tsx  next.config.ts  package-lock.json  package.json
webv3.3/: README.md  package-lock.json  package.json  tailwind.config.ts
(+173 files in other folders)
