[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zion-sdk"
version = "2.8.5"
description = "Official Python SDK for ZION Blockchain"
readme = "README.md"
authors = [
    {name = "ZION Core Team", email = "admin@zionterranova.com"}
]
license = {text = "MIT"}
keywords = ["blockchain", "cryptocurrency", "zion", "sacred-library", "consciousness-mining"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.28.0",
    "base58>=2.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "mypy>=0.990",
]

[project.urls]
Homepage = "https://www.zionterranova.com"
Documentation = "https://docs.zionterranova.com"
Repository = "https://github.com/Zion-TerraNova/Zion-TestNet2.8.5"
Issues = "https://github.com/Zion-TerraNova/Zion-TestNet2.8.5/issues"

[tool.setuptools]
packages = ["zion_sdk"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
